[package]
name = "orbitpay-contract"
version = "1.0.0"
edition = "2021"
description = "Soroban Smart Contract for payment processing, refunds, and query ledger"

[lib]
crate-type = ["cdylib"]

[dependencies]
soroban-sdk = "26.1.0"

[dev-dependencies]
soroban-sdk = { version = "26.1.0", features = ["testutils"] }
