[package]
name = "astracourt-contract"
version = "1.0.0"
edition = "2021"
description = "AstraCourt: Decentralized escrow and dispute arbitration smart contracts for Stellar Soroban"

[lib]
crate-type = ["cdylib"]

[dependencies]
soroban-sdk = "26.1.0"

[dev-dependencies]
soroban-sdk = { version = "26.1.0", features = ["testutils"] }
